Updated region testing for icon test case

--- a/testSuites/suite_imageBasedTesting/suite.conf
+++ b/testSuites/suite_imageBasedTesting/suite.conf
@@ -1,8 +1,8 @@
 AUT=appsampleApp
 CWD=
 ENVVARS=envvars
-HOOK_SUB_PROCESSES=true
-IMPLICITAUTSTART=1
+HOOK_SUB_PROCESSES=false
+IMPLICITAUTSTART=0
 LANGUAGE=Python
 OBJECTMAPSTYLE=script
 TEST_CASES=tst_iconRecognition tst_textRecognition tst_sandbox tst_logging
