--- a/testSuites/suite_imageBasedTesting/suite.conf
+++ b/testSuites/suite_imageBasedTesting/suite.conf
@@ -5,6 +5,6 @@ HOOK_SUB_PROCESSES=false
 IMPLICITAUTSTART=0
 LANGUAGE=Python
 OBJECTMAPSTYLE=script
-TEST_CASES=tst_iconRecognition tst_textRecognition tst_example tst_sandbox tst_logging tst_menuIconVisibility
+TEST_CASES=tst_iconRecognition tst_textRecognition tst_logging tst_example tst_sandbox tst_menuIconVisibility
 VERSION=3
 WRAPPERS=Qt
