ignore testResults folder

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ sampleApp/build/
 sampleApp/build/Desktop_Qt_6_8_2-Debug/
 sampleApp/build/Desktop_Qt_6_8_2-Debug/.rcc/
 sampleApp/build/Desktop_Qt_6_8_2-Debug/CMakeFiles/
+testResults/
