--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ sampleApp/build/
 sampleApp/build/Desktop_Qt_6_8_2-Debug/
 sampleApp/build/Desktop_Qt_6_8_2-Debug/.rcc/
 sampleApp/build/Desktop_Qt_6_8_2-Debug/CMakeFiles/
+testResults/
+.env.paths
