Updated test script for test center, changed env variables. Ready for demo.

--- a/.env.paths.example
+++ b/.env.paths.example
@@ -1,8 +1,9 @@
 # Edit these
-QTDIR=$HOME/PATH_TO_QT
-SQUISHDIR=$HOME/PATH_TO_SQUISH
-TESTCENTERDIR=$HOME/PATH_TO_TESTCENTER
+QTDIR=/PATH_TO_QT
+SQUISHDIR=/PATH_TO_SQUISH
+TESTCENTERDIR=/PATH_TO_TESTCENTER
 LD_LIBRARY_PATH=$QTDIR/QT_VERSION/GCC_FOLDER/lib:$LD_LIBRARY_PATH
+TESTCENTER_ADDRESS=IP:PORT
 
 # Leave these alone
 PATH=$QTDIR/Tools/CMake/bin:$PATH
