--- a/testSuites/suite_settingsScreen/suite.conf
+++ b/testSuites/suite_settingsScreen/suite.conf
@@ -1,5 +1,7 @@
 AUT=appsampleApp
 ENVVARS=envvars
+HOOK_SUB_PROCESSES=false
+IMPLICITAUTSTART=0
 LANGUAGE=Python
 OBJECTMAPSTYLE=script
 TEST_CASES=tst_sliders tst_doubleClick tst_longPress
