changes to .env files

--- a/.env.paths.example
+++ b/.env.paths.example
@@ -4,6 +4,7 @@ SQUISHDIR=/PATH_TO_SQUISH
 TESTCENTERDIR=/PATH_TO_TESTCENTER
 LD_LIBRARY_PATH=$QTDIR/QT_VERSION/GCC_FOLDER/lib:$LD_LIBRARY_PATH
 TESTCENTER_ADDRESS=IP:PORT
+SQUISH_GCC_PATH=/PATH_TO_SQUISH_GCC_FOLDER
 
 # Leave these alone
 PATH=$QTDIR/Tools/CMake/bin:$PATH
