--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,7 +17,7 @@ jobs:
           cmake -S sampleApp -B sampleApp/build -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH:PATH=$SQUISH_GCC_PATH
           cmake --build sampleApp/build
           chmod +x automated_tests_script.sh
-          ./automated_tests_script.sh
+          ./automate_tests_script.sh
 
       #- name: Setup AUT
       #  run: |
