--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,7 @@ jobs:
           set -a; source /home/tony/Desktop/final_deliverable/GDMS-Final-Project/.env.paths; set +a
           cmake -S sampleApp -B sampleApp/build -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH:PATH=$SQUISH_GCC_PATH
           cmake --build sampleApp/build
-          chmod +x automated_tests_script.sh
+          chmod +x automate_tests_script.sh
           ./automate_tests_script.sh
 
       #- name: Setup AUT
